[package]
name = "bottles-server"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
readme.workspace = true

[dependencies]
bottles-core = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
